Added AuthContrller and userController and it's features